syntax = "proto3";

package auth;

option go_package = "Backend/internal/proto/gen";

// Servicio de Autenticación
service AuthService {
    // Autenticar usuario
    rpc Login(LoginRequest) returns (LoginResponse);
    
    // Validar token
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
    
    // Crear usuario
    rpc CreateUser(CreateUserRequest) returns (UserResponse);
    
    // Obtener usuario por ID
    rpc GetUser(GetUserRequest) returns (UserResponse);
    
    // Health check
    rpc HealthCheck(HealthRequest) returns (HealthResponse);
}

// Mensajes de Autenticación
message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    User user = 2;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    User user = 2;
    string error = 3;
}

// Mensajes de Usuario
message CreateUserRequest {
    string email = 1;
    string password = 2;
    string role = 3;
    string nombre_completo = 4;
    string telefono = 5;
}

message GetUserRequest {
    int32 id = 1;
}

message UserResponse {
    User user = 1;
    string error = 2;
}

message User {
    int32 id = 1;
    string email = 2;
    string role = 3;
    string nombre_completo = 4;
    string telefono = 5;
    string fecha_registro = 6;
}

// Health Check
message HealthRequest {}

message HealthResponse {
    string status = 1;
    int64 timestamp = 2;
}