syntax = "proto3";

package user;

option go_package = "delivery-proto/userpb";

service UserService {
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  rpc GetUserByID(GetUserByIDRequest) returns (UserResponse);
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByIDRequest {
  int32 id = 1;
}

message UserResponse {
  int32 id = 1;
  string email = 2;
  string passwordHash = 3;
  string role = 4;
  string nombreCompleto = 5;
}
